--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.4",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "astro": "^4.4.9",
